2008-11-23  smeghead <smeghead@users.sourceforge.jp>

    * 予約されているtopというプロジェクトIDを追加できないようにした。 
    * プロジェクトIDにURLで使用できない文字が指定された場合に対応した。
      プロジェクトIDをURLとして使用する場合は、urlエンコードするようにした。

2008-11-23  smeghead <smeghead@users.sourceforge.jp>

    * 1.2.1-alpha リリース

2008-11-23  smeghead <smeghead@users.sourceforge.jp>

    * プロジェクトの画面から、プロジェクト一覧へのリンクを追加。
    * 

2008-11-23  smeghead <smeghead@users.sourceforge.jp>

    * 全体の管理ページの作成途中。

2008-11-10  smeghead <smeghead@users.sourceforge.jp>

    * 全体のトップページの作成。
    * トップの編集機能作成。

2008-11-09  smeghead <smeghead@users.sourceforge.jp>

    * 複数プロジェクト対応の開始。
    * ファイルの分割。プロジェクト毎のアクション処理とトップのアクション処理を別のファイルに記述するようにする。
    * プロジェクト部分のアクションが新しいURLで動作するようになった。
     - 旧URL http://www.example.com/starbug1/index.cgi/ticket/10
     - 新URL http://www.example.com/starbug1/index.cgi/project_name/ticket/10
    * 不要なファイルが存在したので削除した。
    * 複数プロジェクト対応用のデータベース追加

2008-11-03  smeghead <smeghead@users.sourceforge.jp>

    * エラーが発生してdie関数を呼び出した時、ブラウザにもエラーの内容を表示するようにした。
      セキュリティの問題よりも、Starbug1の問題を解決できた方がいいので、ファイ
      ル名、行数、エラーメッセージも表示するようにした。

2008-10-26  smeghead <smeghead@users.sourceforge.jp>

    * 1.1.4 リリース

2008-10-26  smeghead <smeghead@users.sourceforge.jp>

    * リリース準備

2008-10-23  smeghead <smeghead@users.sourceforge.jp>

    * TAKAHASHI hideakiさんから頂いたパッチを取り込んだ。
    * バッファオーバーフローの対策
    * コンパイル時の警告の回避

2008-10-11  smeghead <smeghead@users.sourceforge.jp>

    * 1.1.3 リリース

2008-10-04  smeghead <smeghead@users.sourceforge.jp>

    * 管理ツールのスタイル設定で、正しく値を取得できていないために、スタイル設定が上書きされてしまう問題を修正。
    * h4のスタイルシート設定を追加。トップページの編集部分のスタイル調整のため。
    * リリース準備

2008-09-07  smeghead <smeghead@users.sourceforge.jp>

    * 1.1.2 リリース

2008-09-07  smeghead <smeghead@users.sourceforge.jp>

    * トップ画像のキャッシュ指定が正しくなかったために、トップ画像が表示されない問題を修正。
      Expiresではなく、Cache-Control: max-arg で指定するように修正した。

2008-09-07  smeghead <smeghead@users.sourceforge.jp>

    * 1.1.1 リリース

2008-09-07  smeghead <smeghead@users.sourceforge.jp>
